<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
android:background="@color/main">
    <ImageView
            android:layout_marginVertical="16dp"
            android:layout_width="150dp" android:layout_gravity="center_horizontal"
            android:layout_height="150dp" android:src="@drawable/imfine_white"
            android:background="@android:color/transparent"
             android:id="@+id/imageView2"/>

    <LinearLayout android:layout_margin="16dp" android:background="@color/skyGrey" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
        <TextView
                android:textSize="30dp"
                android:gravity="center_horizontal"
                android:layout_margin="8dp"
                android:text="@string/login"
                android:textColor="@color/wood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView"/>
        <EditText
                android:textColorHint="@color/wood"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/putEmail"
                android:ems="10"
                android:id="@+id/editText"/>
        <EditText
                android:textColorHint="@color/wood"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/putPw"
                android:ems="10"
                android:id="@+id/editText2"/>
        <Button
                android:textSize="17dp"
                android:layout_margin="8dp"
                android:text="@string/login"
                android:background="@color/wood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btn_logIn"/>

    </LinearLayout>

    <LinearLayout
            android:background="@android:color/transparent"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:background="@android:color/transparent"
                android:textStyle="bold"
                android:textSize="17dp"

                android:text="@string/lostIDPW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="1"/>
        <TextView
                android:background="@android:color/transparent"
                android:textStyle="bold"
                android:textSize="17dp"
                android:text="@string/signIn"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/text_logIn_signIn" android:layout_weight="1"
                />
    </LinearLayout>

</LinearLayout>